Fixed table of contents overflow

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -572,6 +572,10 @@ pre[class*="language-"] {
 
 // Carbon Ads styling
 .toc-wrapper {
+  &.pin-bottom {
+    margin-top: 84px;
+  }
+
   position: relative;
   margin-top: 42px;
 }
